--- a/first.html
+++ b/first.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head> 
-		<title> Test </title>
+		<title> Гостьова книга </title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="shortcut icon" href="ico.ico" type="image/x-icon">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,7 +19,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Гостьова книга</a>
+				<a class="navbar-brand" href="http://hwork.net/guestbook/">Гостьова книга</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
@@ -38,7 +38,7 @@
 					<h4 class="modal-title" id="myModalLabel">Про автора</h4>
 				</div>
 				<div class="modal-body">
-					Автор цієї сторінки — Богдан Щербаков, який навчається в групі ПС-46. <br> Створено спеціально для О.О.
+					Автор цієї сторінки — Богдан Щербаков, який навчається в групі ПС-46. <br> Створено спеціально для базового керівництва по створенню сайтів.
 				</div>
 			</div>
 		</div>
